Fixing the style: fonts, spacing (header). Adding transitions (squares, buttons).

--- a/colorGame.css
+++ b/colorGame.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   background-color: #232323;
-  font-style: "Montserrat", "Avenir";
+  font-family: 'Montserrat', sans-serif;
 }
 
  .square {
@@ -11,6 +11,9 @@ body {
    margin: 1.66%;
    float: left;
    border-radius: 2rem;
+   transition: background 0.5s;
+   -webkit-transition: background 0.5s;
+   -moz-transition: background 0.5s;
  }
 
  #container{
@@ -34,6 +37,11 @@ h1{
     display: block;
   }
 
+#message{
+  display: inline-block;
+  width: 20%;
+}
+
 #stripe{
   background: #fff;
   height: 30px;
@@ -42,6 +50,25 @@ h1{
 }
 
 .selected {
-  background-color: blue;
+  background-color: #4682b4;
   color: #fff;
+}
+
+button {
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  color: #4682b4;
+  height: 100%;
+  font-size: 1rem;
+  font-weight: 700;
+  letter-spacing: 0.15rem;
+  transition: all 0.2s;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.5s;
+}
+
+button:hover {
+  color: #fff;
+  background-color: #4682b4;
 }
